update exercises and add nutritions
