# backend/internal/handlers/nutrition_handler.go
@@ -8,6 +8,8 @@ import (
 	"log"
 	"net/http"
 	"time"
+
+	"github.com/go-chi/chi/v5"
 )
 
 type NutritionHandler struct {
@@ -23,18 +25,18 @@ func NewNutritionHandler(service *services.NutritionService) *NutritionHandler {
 // @Description Returns nutrition data for the specified date
 // @Tags nutrition
 // @Produce json
-// @Param date query string false "Date in YYYY-MM-DD format"
+// @Param date path string trye "Date in YYYY-MM-DD format"
 // @Success 200 {array} models.NutritionEntry
 // @Failure 400 {object} models.ErrorResponse
 // @Failure 500 {object} models.ErrorResponse
-// @Router /nutrition [get]
+// @Router /nutritions{date} [get]
 func (h *NutritionHandler) GetDailyNutrition(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
 	ctx, cancel := context.WithTimeout(ctx, 5*time.Second)
 	defer cancel()
 
-	dateStr := r.URL.Query().Get("date")
+	dateStr := chi.URLParam(r, "date")
 
 	date, err := time.Parse("2006-01-02", dateStr)
 	if err != nil {
